# realpython

./: .gitignore  note.md  pyproject.toml
maths/: factors.py
python-pydantic/: README.md
